<resources>
    <string name="app_name">Manga Ra</string>
    <string name="welcome">Welcome to\nManga Ra</string>
    <string name="good_morning">Good morning</string>
    <string name="my_name">Zukron Alviandy R</string>
    <string name="search_here">Search here</string>
    <string name="popular">Popular</string>
    <string name="more"><![CDATA[more >]]></string>
    <string name="genre">Genre</string>
    <string name="country">Country</string>
    <string name="manga">Manga</string>
    <string name="japan_comic">(Komik japan)</string>
    <string name="manhua">Manhua</string>
    <string name="china_comic">(Komik china)</string>
    <string name="manhwa">Manhwa</string>
    <string name="korea_comic">(Komik korea)</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="your_account">Your account</string>
    <string name="my_email">zukronalviandy@gmail.com</string>
    <string name="sign_out">Sign out</string>
    <string name="follow_me">Follow me</string>
    <string name="github">Github</string>
    <string name="instagram">Instagram</string>
    <string name="youtube">Youtube</string>
    <string name="facebook">Facebook</string>
    <string name="detail_manga">Detail Manga</string>
    <string name="search_manga">Search Manga</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et…</string>

    <string name="youtube_link">https://www.youtube.com/channel/UCjRgl81p9JOSGb7OdA2zhHA?view_as=subscriber</string>
    <string name="github_link">https://github.com/zalviandyr</string>
    <string name="facebook_link">https://www.facebook.com/Z.Alviandy.R28/</string>
    <string name="instagram_link">https://www.instagram.com/zukronalviandy11/</string>
    <string name="status">Status</string>
    <string name="double_dot">:</string>
    <string name="author">Author</string>
    <string name="continue_reading">Lanjut baca</string>
    <string name="synopsis">Synopsis</string>
    <string name="chapter">Chapter</string>
    <string name="all_chapter">All Chapter</string>
    <string name="previous_chapter">Previous chapter</string>
    <string name="next_chapter">Next chapter</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="google">Google</string>
    <string name="new_account">New Account ?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="last_chapter">Terakhir dibaca</string>
    <string name="good_afternoon">Good afternoon</string>
    <string name="good_evening">Good evening</string>
</resources>