<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_second"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_header_round_primary"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/account"
            android:textAppearance="@style/MangaRa.TextAppearance.Title3"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="-20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:background="@drawable/bg_header_round_secondary"
                android:elevation="10dp"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="20dp"
                android:paddingBottom="5dp"
                android:text="@string/your_account"
                android:textAppearance="@style/MangaRa.TextAppearance.Title4"
                android:textColor="@android:color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-15dp"
                android:background="@drawable/bg_body_round_primary"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/accountFrag_btnSignOut"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/accountFrag_tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/my_name"
                        android:textAppearance="@style/MangaRa.TextAppearance.Body1"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/accountFrag_tvEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/my_email"
                        android:textAppearance="@style/MangaRa.TextAppearance.Body1"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/accountFrag_btnSignOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:backgroundTint="@color/colorRed"
                    android:insetTop="10dp"
                    android:insetBottom="10dp"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="20dp"
                    android:text="@string/sign_out"
                    android:textAllCaps="false"
                    android:textAppearance="@style/MangaRa.TextAppearance.Title3"
                    app:shapeAppearance="@style/MangaRa.ShapeAppearance" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="-20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:background="@drawable/bg_header_round_secondary"
                android:elevation="10dp"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="20dp"
                android:paddingBottom="5dp"
                android:text="@string/follow_me"
                android:textAppearance="@style/MangaRa.TextAppearance.Title4"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-15dp"
                android:background="@drawable/bg_body_round_primary"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="25dp"
                android:paddingEnd="0dp"
                android:paddingBottom="20dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/accountFrag_btnGithub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorMain"
                    android:gravity="start|center_vertical"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:text="@string/github"
                    android:textAppearance="@style/MangaRa.TextAppearance.Title3"
                    app:icon="@drawable/ic_icon_awesome_github"
                    app:shapeAppearance="@style/MangaRa.ShapeAppearance" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/accountFrag_btnInstagram"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorMain"
                    android:gravity="start|center_vertical"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:text="@string/instagram"
                    android:textAppearance="@style/MangaRa.TextAppearance.Title3"
                    app:icon="@drawable/ic_icon_feather_instagram"
                    app:shapeAppearance="@style/MangaRa.ShapeAppearance" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/accountFrag_btnYoutube"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorMain"
                    android:gravity="start|center_vertical"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:text="@string/youtube"
                    android:textAppearance="@style/MangaRa.TextAppearance.Title3"
                    app:icon="@drawable/ic_icon_simple_youtube"
                    app:shapeAppearance="@style/MangaRa.ShapeAppearance" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/accountFrag_btnFacebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorMain"
                    android:gravity="start|center_vertical"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:text="@string/facebook"
                    android:textAppearance="@style/MangaRa.TextAppearance.Title3"
                    app:icon="@drawable/ic_icon_simple_facebook"
                    app:shapeAppearance="@style/MangaRa.ShapeAppearance" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>