<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_first"
    android:orientation="vertical"
    android:paddingStart="35dp"
    android:paddingTop="30dp"
    android:paddingEnd="35dp"
    android:paddingBottom="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:theme="@style/AppTheme.ScrollEdge">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textAppearance="@style/MangaRa.TextAppearance.Title1"
                android:textColor="@android:color/white" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:cardBackgroundColor="@color/colorMainLightAlpha80"
                app:cardCornerRadius="20dp"
                app:cardElevation="1dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:text="@string/sign_in"
                        android:textAppearance="@style/MangaRa.TextAppearance.Title2"
                        android:textColor="@android:color/white" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signUpFrag_inputFullName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:boxBackgroundColor="@android:color/white"
                        app:boxCornerRadiusBottomEnd="30dp"
                        app:boxCornerRadiusBottomStart="30dp"
                        app:boxCornerRadiusTopEnd="30dp"
                        app:boxCornerRadiusTopStart="30dp"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/full_name"
                            android:inputType="text"
                            android:padding="13dp"
                            android:textAppearance="@style/MangaRa.TextAppearance.Body1"
                            android:textColor="@color/colorMain"
                            android:textColorHint="@color/colorMain" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signUpFrag_inputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:boxBackgroundColor="@android:color/white"
                        app:boxCornerRadiusBottomEnd="30dp"
                        app:boxCornerRadiusBottomStart="30dp"
                        app:boxCornerRadiusTopEnd="30dp"
                        app:boxCornerRadiusTopStart="30dp"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:padding="13dp"
                            android:textAppearance="@style/MangaRa.TextAppearance.Body1"
                            android:textColor="@color/colorMain"
                            android:textColorHint="@color/colorMain" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signUpFrag_inputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:boxBackgroundColor="@android:color/white"
                        app:boxCornerRadiusBottomEnd="30dp"
                        app:boxCornerRadiusBottomStart="30dp"
                        app:boxCornerRadiusTopEnd="30dp"
                        app:boxCornerRadiusTopStart="30dp"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:padding="13dp"
                            android:textAppearance="@style/MangaRa.TextAppearance.Body1"
                            android:textColor="@color/colorMain"
                            android:textColorHint="@color/colorMain" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signUpFrag_inputConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:boxBackgroundColor="@android:color/white"
                        app:boxCornerRadiusBottomEnd="30dp"
                        app:boxCornerRadiusBottomStart="30dp"
                        app:boxCornerRadiusTopEnd="30dp"
                        app:boxCornerRadiusTopStart="30dp"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword"
                            android:padding="13dp"
                            android:textAppearance="@style/MangaRa.TextAppearance.Body1"
                            android:textColor="@color/colorMain"
                            android:textColorHint="@color/colorMain" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/signUpFrag_btnEnter"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:text="@string/enter"
                        android:textAppearance="@style/MangaRa.TextAppearance.Title3"
                        app:backgroundTint="@color/colorGreen"
                        app:cornerRadius="20dp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textAppearance="@style/MangaRa.TextAppearance.Body1"
            android:textColor="@android:color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpFrag_btnSignInHere"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:text="@string/sign_in_here"
            android:textAppearance="@style/MangaRa.TextAppearance.Body1"
            android:textColor="@color/colorGreen" />
    </LinearLayout>
</LinearLayout>